# OpenGLStudying

./: CMakeLists.txt  Makefile  main.cpp
include/: camera.h  shader.h  shaderProgram.h  texture.h  utils.h
shaders/: shader.frag  shader.vert
src/: camera.cpp  glad.c  shader.cpp  shaderProgram.cpp  texture.cpp
